# documentation/api.spec.yaml
@@ -103,45 +103,14 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "401":
+          description: Invalid API Key or no API Key supplied
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "404":
           description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /api/music/play-track/{trackId}:
-    put:
-      summary: Play the Given Track
-      description: Plays the provided track. This will always affect user 1 (per-user control coming soon).
-      operationId: playTrack
-      tags:
-        - music
-      parameters:
-        - name: trackId
-          in: path
-          description: The id of the track to play
-          required: true
-          schema:
-            type: integer
-      security:
-        - SessionAuth: []
-      responses:
-        "204":
-          description: Track played successfully
-        "400":
-          description: Invalid ID supplied
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "404":
-          description: Track not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "500":
-          description: Internal Server Error
           content:
             application/json:
               schema:
@@ -172,20 +141,10 @@ paths:
       security:
         - SessionAuth: []
       responses:
+        "200":
+          description: An error has occurred. Check the message for more details. (This needs to be 200 because the response is html for a snackbar error. I couldn't get the response-targets extension working to support rendering responses with error codes. (https://htmx.org/extensions/response-targets/))
         "204":
           description: Tracks played successfully
-        "400":
-          description: Invalid ID supplied
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "404":
-          description: Track not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
         "500":
           description: Internal Server Error
           content:
@@ -269,6 +228,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "401":
+          description: Invalid API Key or no API Key supplied
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "404":
           description: Track(s) not found
           content:
@@ -306,6 +271,12 @@ paths:
                 $ref: "#/components/schemas/Track"
         "400":
           description: Invalid ID supplied
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "401":
+          description: Invalid API Key or no API Key supplied
           content:
             application/json:
               schema:
